# violent-python3

./: .gitignore  pyproject.toml
tests/: conftest.py  test_setup_validation.py
