[tool.poetry]
name = "violent-python3"
version = "0.1.0"
description = "Python 3 source code for the book 'Violent Python' by TJ O'Connor"
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "chapter01"}, {include = "chapter02"}, {include = "chapter03"}, {include = "chapter04"}, {include = "chapter05"}, {include = "chapter06"}, {include = "chapter07"}]

[tool.poetry.dependencies]
python = "^3.8"
pexpect = "~4.8.0"
ptyprocess = "~0.6.0"
python-nmap = "^0.7.1"
beautifulsoup4 = "~4.9.1"
Pillow = ">=8.3.2"
pypdf4 = "~1.27.0"
requests = "~2.23.0"
geoip2 = "~3.0.0"
dpkt = "~1.9.2"
scapy = "~2.4.3"
IPy = "~1.0"
pybluez = {version = "~0.23", optional = true, markers = "sys_platform == 'darwin'"}
MechanicalSoup = "~0.12.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
pytest-cov = "^4.1.0"
pytest-mock = "^3.11.1"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = [
    "-ra",
    "--strict-markers",
    "--cov=chapter01",
    "--cov=chapter02", 
    "--cov=chapter03",
    "--cov=chapter04",
    "--cov=chapter05",
    "--cov=chapter06",
    "--cov=chapter07",
    "--cov-branch",
    "--cov-report=term-missing:skip-covered",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]
markers = [
    "unit: marks tests as unit tests (fast)",
    "integration: marks tests as integration tests (slower)",
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.coverage.run]
source = ["chapter01", "chapter02", "chapter03", "chapter04", "chapter05", "chapter06", "chapter07"]
branch = true
omit = [
    "*/tests/*",
    "*/__pycache__/*",
    "*/venv/*",
    "*/.venv/*",
]

[tool.coverage.report]
precision = 2
show_missing = true
skip_covered = true
fail_under = 80
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise AssertionError",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]

[tool.coverage.html]
directory = "htmlcov"

[tool.coverage.xml]
output = "coverage.xml"

# Scripts can be run with: poetry run python -m pytest
# Or directly with: .venv/bin/pytest

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"